Change /quizzes endpoints to use request body and add tests
